syntax = "proto3";

package command.v1;

service CommandService {
  rpc SubscribeCommands(SubscribeRequest) returns (stream CommandPackage);
  rpc Acknowledge(AcknowledgeRequest) returns (AcknowledgeResponse);
}

message SubscribeRequest {
  string device_id = 1;
}

// Strongly-typed command envelope
message CommandPackage {
  string command_id = 1;
  
  oneof command {
    SetClockOverride set_clock = 2;
    RequestSystemReboot request_reboot = 3;
    UpdateNetworkConfig update_network = 4;
    RotateScreen rotate_screen = 5;
  }
  
  bool requires_ack = 6;
  string issued_at = 7;
}

// Explicit command definitions (no JSON parsing needed)
message SetClockOverride {
  string simulated_time = 1;  // ISO 8601, empty = reset to system time
}

message RotateScreen {
  string orientation = 1;  // "landscape", "portrait", "auto", "landscape_left", "landscape_right", "portrait_up", "portrait_down"
  bool fullscreen = 2;     // optional: also toggle fullscreen
}

message RequestSystemReboot {
  int32 delay_seconds = 1;
}

message UpdateNetworkConfig {
  string new_ssid = 1;
  string new_password = 2;
}

// Request to acknowledge command execution
message AcknowledgeRequest {
  string device_id = 1;
  string command_id = 2;
  AcknowledgeStatus status = 3;
  string message = 4; // Human-readable status or error details
}

// Status of command acknowledgment
enum AcknowledgeStatus {
  ACKNOWLEDGE_STATUS_UNSPECIFIED = 0;
  ACKNOWLEDGE_STATUS_RECEIVED = 1;        // Command received, executing
  ACKNOWLEDGE_STATUS_COMPLETED = 2;       // Executed successfully
  ACKNOWLEDGE_STATUS_FAILED = 3;          // Execution failed
  ACKNOWLEDGE_STATUS_REJECTED = 4;        // Command rejected (invalid, unsupported)
}

message AcknowledgeResponse {
  bool accepted = 1;
  uint32 retry_after_seconds = 2; // If server wants client to backoff
}
